--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             <option value="jpeg">JPEG</option>
           </select>
           <div style="height:14px"></div>
-          <!-- Button is 'button' (no submit). Inline fallback calls __doRun if present. -->
+          <!-- Button is 'button' (no form submit). Inline fallback calls __doRun if present. -->
           <button id="runBtn" type="button" onclick="window.__doRun && window.__doRun()">Run</button>
         </div>
       </div>
@@ -67,13 +67,12 @@
 
 <!-- =================== SCRIPT =================== -->
 <script>
-/* --------- utilities --------- */
+/* ---------- debug + globals ---------- */
 const dbg     = document.getElementById('debug');
 const log = (...a) => { dbg.textContent += '\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); };
 window.addEventListener('error', e => log('Window error:', e.message));
 window.addEventListener('unhandledrejection', e => log('Unhandled promise:', String(e.reason)));
 
-/* --------- grab elements (script is at end of body, so DOM is ready) --------- */
 const filesEl = document.getElementById('files');
 const thumbsEl= document.getElementById('thumbs');
 const promptEl= document.getElementById('prompt');
@@ -84,7 +83,7 @@ const gallery = document.getElementById('gallery');
 
 log('BOOT: script loaded.');
 
-/* --------- thumbnails --------- */
+/* ---------- thumbnails ---------- */
 filesEl.addEventListener('change', () => {
   thumbsEl.innerHTML = '';
   [...filesEl.files].slice(0,4).forEach(f=>{
@@ -95,36 +94,55 @@ filesEl.addEventListener('change', () => {
   });
 });
 
-/* --------- helpers --------- */
+/* ---------- helpers ---------- */
 async function fileToBase64(file){
   const ab = await file.arrayBuffer();
   let bin=''; const bytes=new Uint8Array(ab), step=0x8000;
   for (let i=0;i<bytes.length;i+=step) bin += String.fromCharCode.apply(null, bytes.subarray(i,i+step));
   return btoa(bin);
 }
-function extractImageUrls(obj, out=[]) {
+
+function extractImageUrlsDeep(obj, out = []) {
   if (!obj) return out;
   if (typeof obj === 'string') {
-    if (/^https?:\/\/[^\s"]+\.(png|jpg|jpeg|webp)(\?.*)?$/i.test(obj)) out.push(obj);
+    if (/^https?:\/\/\S+\.(png|jpg|jpeg|webp)(\?.*)?$/i.test(obj)) out.push(obj);
     return out;
   }
-  if (Array.isArray(obj)) obj.forEach(v => extractImageUrls(v, out));
-  else if (typeof obj === 'object') Object.values(obj).forEach(v => extractImageUrls(v, out));
+  if (Array.isArray(obj)) { obj.forEach(v => extractImageUrlsDeep(v, out)); return out; }
+  if (typeof obj === 'object') {
+    for (const [k, v] of Object.entries(obj)) {
+      if (typeof v === 'string' && /^https?:\/\//.test(v) && /(image|img|url|result|download)/i.test(k)) out.push(v);
+      extractImageUrlsDeep(v, out);
+    }
+  }
   return out;
 }
+
 async function pollStatus(taskId, recordId) {
   log('Polling status…', { taskId, recordId });
-  for (let i=0;i<60;i++){  // ~3 minutes
-    const url = `/.netlify/functions/kie-status?${new URLSearchParams({taskId, recordId}).toString()}`;
+  for (let i = 0; i < 60; i++) { // ~3 minutes @ 3s
+    const url = `/.netlify/functions/kie-status?${new URLSearchParams({ taskId, recordId }).toString()}`;
     const r = await fetch(url);
-    const j = await r.json().catch(()=>null);
+    const j = await r.json().catch(() => null);
     log('STATUS JSON:', j);
 
-    const data = j && (j.response || j).data;
-    const status = (data && (data.status || data.taskStatus || data.state || data.stage || '')).toString().toLowerCase();
+    // read both our status wrapper and any KIE-native wrapper
+    const httpStatus = j?.httpStatus ?? j?.response?.status ?? j?.response?.httpStatus ?? null;
+    const data = j?.response?.data ?? j?.data ?? null;
 
+    // derive a status string safely (never .toString() on undefined)
+    const raw = (data && (data.status || data.taskStatus || data.state || data.stage)) || '';
+    const status = String(raw || '').toLowerCase();
+
+    // 404 or empty = not ready yet → keep polling
+    if (httpStatus === 404 || (!data && !status)) {
+      await new Promise(res => setTimeout(res, 3000));
+      continue;
+    }
+
+    // success?
     if (/success|succeed|finished|done|complete/.test(status)) {
-      const urls = extractImageUrls(j);
+      const urls = extractImageUrlsDeep(j);
       gallery.innerHTML = '';
       if (urls.length) {
         urls.forEach(u=>{
@@ -140,15 +158,19 @@ async function pollStatus(taskId, recordId) {
       outBox.style.display = 'block';
       return;
     }
-    if (/fail|error|exception|illegal|denied|reject/.test(status)) {
-      alert('KIE reported failure. See Debug for details.'); return;
+
+    // explicit failure?
+    if (/fail|error|exception|illegal|denied|reject|timeout/.test(status)) {
+      alert('KIE reported failure. See Debug for details.');
+      return;
     }
-    await new Promise(r => setTimeout(r, 3000));
+
+    await new Promise(res => setTimeout(res, 3000));
   }
   alert('Timed out waiting for result. Check Debug for last status.');
 }
 
-/* --------- main run function (also used by inline fallback) --------- */
+/* ---------- main run (also used by inline fallback) ---------- */
 window.__doRun = async function(){
   log('Run clicked.');
   gallery.innerHTML = '';
@@ -182,7 +204,7 @@ window.__doRun = async function(){
     log(`CreateTask response status: ${res.status} content-type: ${ct}`);
     let j = null; try { j = JSON.parse(txt); log('CreateTask JSON:', j); } catch { log('CreateTask TEXT:', txt); }
 
-    const data = j && j.data || j && j.response && j.response.data || {};
+    const data = j?.data || j?.response?.data || {};
     const taskId = data.taskId || data.id || '';
     const recordId = data.recordId || '';
     if (taskId || recordId) {
