--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,6 @@
     .thumb{margin-top:8px; width:160px; height:160px; object-fit:cover; border-radius:10px; border:1px solid #262634}
     details{margin-top:16px; background:#0f0f15; border:1px solid #262634; border-radius:12px; padding:10px 12px}
     pre{white-space:pre-wrap; word-break:break-word; margin:0}
-    .out{margin-top:18px; padding:12px; background:#0f0f15; border:1px solid #262634; border-radius:12px}
-    .grid{display:grid; grid-template-columns:repeat(auto-fill, minmax(240px,1fr)); gap:14px}
     .note{font-size:12px; opacity:.7; margin-top:6px}
   </style>
 </head>
@@ -32,10 +30,10 @@
         <div class="col">
           <label for="files">Select 1–4 images (jpeg/png/webp, ≤10MB each)</label>
           <input id="files" type="file" accept="image/*" multiple />
-          <div id="thumbs" class="grid"></div>
+          <div id="thumbs"></div>
           <div class="note">
-            Sends <b>JSON</b> to <code>/.netlify/functions/kie-create</code> (upload → createTask),<br/>
-            then polls <code>/.netlify/functions/kie-status</code> for results.
+            Sends <b>JSON</b> to <code>/.netlify/functions/kie-create</code>. KIE will
+            <b>POST the final result</b> directly to your Make.com webhook. This page just shows the task id.
           </div>
         </div>
 
@@ -49,15 +47,10 @@
             <option value="jpeg">JPEG</option>
           </select>
           <div style="height:14px"></div>
-          <!-- Button is 'button' (no form submit). Inline fallback calls __doRun if present. -->
-          <button id="runBtn" type="button" onclick="window.__doRun && window.__doRun()">Run</button>
+          <button id="runBtn" type="button">Run</button>
         </div>
       </div>
     </form>
-
-    <div id="out" class="out" style="display:none">
-      <div class="grid" id="gallery"></div>
-    </div>
 
     <details open>
       <summary>Debug</summary>
@@ -65,36 +58,29 @@
     </details>
   </div>
 
-<!-- =================== SCRIPT =================== -->
 <script>
-/* ---------- debug + globals ---------- */
-const dbg     = document.getElementById('debug');
-const log = (...a) => { dbg.textContent += '\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); };
+const dbg = document.getElementById('debug');
+const filesEl = document.getElementById('files');
+const promptEl = document.getElementById('prompt');
+const formatEl = document.getElementById('format');
+const runBtn   = document.getElementById('runBtn');
+
+const log = (...a) => { dbg.textContent += '\\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); };
+
 window.addEventListener('error', e => log('Window error:', e.message));
 window.addEventListener('unhandledrejection', e => log('Unhandled promise:', String(e.reason)));
 
-const filesEl = document.getElementById('files');
-const thumbsEl= document.getElementById('thumbs');
-const promptEl= document.getElementById('prompt');
-const formatEl= document.getElementById('format');
-const runBtn  = document.getElementById('runBtn');
-const outBox  = document.getElementById('out');
-const gallery = document.getElementById('gallery');
-
-log('BOOT: script loaded.');
-
-/* ---------- thumbnails ---------- */
 filesEl.addEventListener('change', () => {
-  thumbsEl.innerHTML = '';
+  const thumbs = document.getElementById('thumbs');
+  thumbs.innerHTML = '';
   [...filesEl.files].slice(0,4).forEach(f=>{
     const url = URL.createObjectURL(f);
     const img = document.createElement('img');
     img.src = url; img.className = 'thumb';
-    thumbsEl.appendChild(img);
+    thumbs.appendChild(img);
   });
 });
 
-/* ---------- helpers ---------- */
 async function fileToBase64(file){
   const ab = await file.arrayBuffer();
   let bin=''; const bytes=new Uint8Array(ab), step=0x8000;
@@ -102,84 +88,12 @@ async function fileToBase64(file){
   return btoa(bin);
 }
 
-function extractImageUrlsDeep(obj, out = []) {
-  if (!obj) return out;
-  if (typeof obj === 'string') {
-    if (/^https?:\/\/\S+\.(png|jpg|jpeg|webp)(\?.*)?$/i.test(obj)) out.push(obj);
-    return out;
-  }
-  if (Array.isArray(obj)) { obj.forEach(v => extractImageUrlsDeep(v, out)); return out; }
-  if (typeof obj === 'object') {
-    for (const [k, v] of Object.entries(obj)) {
-      if (typeof v === 'string' && /^https?:\/\//.test(v) && /(image|img|url|result|download)/i.test(k)) out.push(v);
-      extractImageUrlsDeep(v, out);
-    }
-  }
-  return out;
-}
-
-async function pollStatus(taskId, recordId) {
-  log('Polling status…', { taskId, recordId });
-  for (let i = 0; i < 60; i++) { // ~3 minutes @ 3s
-    const url = `/.netlify/functions/kie-status?${new URLSearchParams({ taskId, recordId }).toString()}`;
-    const r = await fetch(url);
-    const j = await r.json().catch(() => null);
-    log('STATUS JSON:', j);
-
-    // read both our status wrapper and any KIE-native wrapper
-    const httpStatus = j?.httpStatus ?? j?.response?.status ?? j?.response?.httpStatus ?? null;
-    const data = j?.response?.data ?? j?.data ?? null;
-
-    // derive a status string safely (never .toString() on undefined)
-    const raw = (data && (data.status || data.taskStatus || data.state || data.stage)) || '';
-    const status = String(raw || '').toLowerCase();
-
-    // 404 or empty = not ready yet → keep polling
-    if (httpStatus === 404 || (!data && !status)) {
-      await new Promise(res => setTimeout(res, 3000));
-      continue;
-    }
-
-    // success?
-    if (/success|succeed|finished|done|complete/.test(status)) {
-      const urls = extractImageUrlsDeep(j);
-      gallery.innerHTML = '';
-      if (urls.length) {
-        urls.forEach(u=>{
-          const a = document.createElement('a'); a.href = u; a.textContent = u; a.target = '_blank';
-          const img = document.createElement('img'); img.src = u; img.style.width='100%'; img.style.borderRadius='12px';
-          const wrap = document.createElement('div'); wrap.appendChild(img); wrap.appendChild(a);
-          gallery.appendChild(wrap);
-        });
-      } else {
-        const p = document.createElement('p'); p.textContent = 'No image URLs found in status JSON.';
-        gallery.appendChild(p);
-      }
-      outBox.style.display = 'block';
-      return;
-    }
-
-    // explicit failure?
-    if (/fail|error|exception|illegal|denied|reject|timeout/.test(status)) {
-      alert('KIE reported failure. See Debug for details.');
-      return;
-    }
-
-    await new Promise(res => setTimeout(res, 3000));
-  }
-  alert('Timed out waiting for result. Check Debug for last status.');
-}
-
-/* ---------- main run (also used by inline fallback) ---------- */
-window.__doRun = async function(){
-  log('Run clicked.');
-  gallery.innerHTML = '';
-  outBox.style.display = 'none';
-
+runBtn.addEventListener('click', async () => {
+  log('Submitting…');
   const files = [...filesEl.files];
   if (!files.length) { alert('Choose at least one image.'); return; }
   if (files.length > 4) { alert('Max 4 images.'); return; }
-  for (const f of files){ if (f.size > 10*1024*1024){ alert(`"${f.name}" exceeds 10MB.`); return; } }
+  for (const f of files){ if (f.size > 10*1024*1024){ alert(\`"\${f.name}" exceeds 10MB.\`); return; } }
 
   runBtn.disabled = true;
   try {
@@ -201,16 +115,16 @@ window.__doRun = async function(){
 
     const ct  = res.headers.get('content-type') || '';
     const txt = await res.text();
-    log(`CreateTask response status: ${res.status} content-type: ${ct}`);
-    let j = null; try { j = JSON.parse(txt); log('CreateTask JSON:', j); } catch { log('CreateTask TEXT:', txt); }
-
-    const data = j?.data || j?.response?.data || {};
-    const taskId = data.taskId || data.id || '';
-    const recordId = data.recordId || '';
-    if (taskId || recordId) {
-      await pollStatus(taskId, recordId);
-    } else {
-      alert('Task created but no taskId/recordId returned. See Debug.');
+    log(\`CreateTask response status: \${res.status} content-type: \${ct}\`);
+    try { 
+      const j = JSON.parse(txt);
+      log('CreateTask JSON:', j);
+      const data = j?.data || j?.response?.data || {};
+      const taskId = data.taskId || data.id || '';
+      const recordId = data.recordId || '';
+      if (taskId || recordId) log('Task submitted. Watch your Make webhook for the result.', { taskId, recordId });
+    } catch { 
+      log('CreateTask TEXT:', txt); 
     }
   } catch (err) {
     log('JS ERROR:', String(err));
@@ -218,11 +132,7 @@ window.__doRun = async function(){
   } finally {
     runBtn.disabled = false;
   }
-};
-
-/* attach listener */
-runBtn.addEventListener('click', window.__doRun);
-log('Handler attached.');
+});
 </script>
 </body>
 </html>
