--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,53 @@ async function fileToBase64(file){
   return btoa(bin);
 }
 
+/* >>> ADDED: shrink large/mobile images before upload (prevents 400 text/plain) */
+async function prepareFileForUpload(file){
+  const MAX_BYTES_SOFT = 5 * 1024 * 1024; // soft limit to keep payloads small on mobile
+  const t = (file.type || '').toLowerCase();
+
+  if ((/image\/(png|jpeg|jpg|webp)/.test(t)) && (file.size || 0) <= MAX_BYTES_SOFT) {
+    return {
+      name: file.name,
+      contentType: file.type || 'application/octet-stream',
+      data: await fileToBase64(file)
+    };
+  }
+
+  try {
+    const url = URL.createObjectURL(file);
+    const img = await new Promise((res, rej) => {
+      const i = new Image();
+      i.onload = () => res(i);
+      i.onerror = rej;
+      i.src = url;
+    });
+
+    const maxSide = 2048;
+    let w = img.naturalWidth, h = img.naturalHeight;
+    if (w > h && w > maxSide) { h = Math.round(h * (maxSide / w)); w = maxSide; }
+    else if (h >= w && h > maxSide) { w = Math.round(w * (maxSide / h)); h = maxSide; }
+
+    const c = document.createElement('canvas');
+    c.width = w; c.height = h;
+    c.getContext('2d').drawImage(img, 0, 0, w, h);
+
+    const mime = 'image/jpeg';
+    const quality = 0.88;
+    const dataURL = c.toDataURL(mime, quality);
+    const base64 = dataURL.split(',')[1];
+
+    const name = (file.name || 'image').replace(/\.[^.]+$/,'') + '.jpg';
+    return { name, contentType: mime, data: base64 };
+  } catch {
+    return {
+      name: file.name,
+      contentType: file.type || 'application/octet-stream',
+      data: await fileToBase64(file)
+    };
+  }
+}
+
 /* ===================== MAIN RUN ===================== */
 window.__run = async function(){
   log('RUN: clicked (handler).');
@@ -119,11 +166,7 @@ window.__run = async function(){
     const payload = {
       prompt: ((promptEl.value ?? '').toString().replace(/\u00A0/g,' ').trim()) || '.',
       format: (formatEl.value || 'png').toLowerCase(),
-      files: await Promise.all(files.map(async f => ({
-        name: f.name,
-        contentType: f.type || 'application/octet-stream',
-        data: await fileToBase64(f)
-      })))
+      files: await Promise.all(files.map(prepareFileForUpload))
     };
 
     const res = await fetch('/.netlify/functions/kie-create', {
